# alcura-ipd-ext

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  _check_demo.py  license.txt  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alcura_ipd_ext/: hooks.py  modules.txt  patches.txt  tasks.py
alcura_ipd_ext/api/: admission.py  bed_board.py  billing.py  charting.py  clinical_order.py  consultation.py  department_queue.py  device_feed.py  discharge.py  eligibility.py  intake.py  ipd.py  lab_sample.py  mar.py  nursing.py  patient.py  pharmacy.py  preauth.py  protocol_bundle.py  round_sheet.py
alcura_ipd_ext/config/: desktop.py
alcura_ipd_ext/overrides/: README.md  healthcare_service_unit.py  healthcare_service_unit_type.py  inpatient_record_dashboard.py  lab_test_events.py  patient.py  patient_assessment.py  patient_dashboard.py  patient_encounter_events.py
alcura_ipd_ext/patches/: README.md
alcura_ipd_ext/services/: admission_checklist_service.py  admission_order_service.py  adt_census_service.py  bed_allocation_service.py  bed_availability_service.py  bed_reservation_service.py  bed_transfer_service.py  billing_rule_service.py  charting_service.py  claim_pack_service.py  clinical_order_service.py  consultation_note_service.py  device_exception_service.py  device_feed_service.py  discharge_advice_service.py  discharge_checklist_service.py  discharge_notification_service.py  discharge_service.py  documentation_compliance_service.py  eligibility_service.py  housekeeping_service.py  (+21 more)
docs/: USER_MANUAL.md
(+532 files in other folders)
